--- a/SIM7600/platformio.ini
+++ b/SIM7600/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = esp-wrover-kit
 framework = arduino
+
+monitor_filters =
+    default
+    esp32_exception_decoder
